--- a/tic-tac-toe-ui/Layout/NavMenu.razor
+++ b/tic-tac-toe-ui/Layout/NavMenu.razor
@@ -20,8 +20,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="index">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Lobby
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="game">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Game
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pingtest">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Chat
             </NavLink>
         </div>
     </nav>
