--- a/tic-tac-toe-ui/Pages/Index.razor
+++ b/tic-tac-toe-ui/Pages/Index.razor
@@ -1,62 +1,4 @@
-﻿@* @page "/game"
-@inject IJSRuntime JS
-@using Microsoft.AspNetCore.SignalR.Client
-
-<h3>Игра</h3>
-@if (IsConnected)
-{
-    <p>Подключено к серверу!</p>
-}
-else
-{
-    <p>Подключение... @ErrorMessage</p>
-}
-
-@code {
-    private HubConnection? hubConnection;
-    private bool IsConnected => hubConnection?.State == HubConnectionState.Connected;
-    private string ErrorMessage = "";
-
-    protected override async Task OnInitializedAsync()
-    {
-        hubConnection = new HubConnectionBuilder()
-            .WithUrl("http://26.171.188.146:5001/gameHub")
-            .Build();
-
-    //     hubConnection = new HubConnectionBuilder().WithUrl("http://26.171.188.146:5001/gameHub", options =>
-    // {
-    //     // Временно отключаем проверку сертификата (если self-signed)
-    //     options.HttpMessageHandlerFactory = handler =>
-    //     {
-    //         if (handler is HttpClientHandler clientHandler)
-    //         {
-    //             clientHandler.ServerCertificateCustomValidationCallback = HttpClientHandler.DangerousAcceptAnyServerCertificateValidator;
-    //         }
-    //         return handler;
-    //     };
-    // })
-    // .Build();
-
-        try
-        {
-            await hubConnection.StartAsync();
-        }
-        catch (Exception ex)
-        {
-            ErrorMessage = $"Ошибка: {ex.Message}";
-        }
-    }
-
-    public async ValueTask DisposeAsync()
-    {
-        if (hubConnection is not null)
-        {
-            await hubConnection.DisposeAsync();
-        }
-    }
-} *@
-
-@page "/game"
+﻿@page "/index"
 @inject IJSRuntime JS
 @using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.Extensions.Logging;
@@ -105,3 +47,5 @@ else
         }
     }
 }
+
+
