--- a/tic-tac-toe-ui/Layout/NavMenu.razor
+++ b/tic-tac-toe-ui/Layout/NavMenu.razor
@@ -30,10 +30,16 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="original">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Original
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="pingtest">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Chat
             </NavLink>
         </div>
+        
     </nav>
 </div>
 
