--- a/tic-tac-toe-ui/App.razor
+++ b/tic-tac-toe-ui/App.razor
@@ -1,12 +1,31 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using MudBlazor
+@using Microsoft.AspNetCore.Components.Routing
+
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
+
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
     <NotFound>
-        <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <MudText Typo="Typo.h6">Страница не найдена</MudText>
         </LayoutView>
     </NotFound>
 </Router>
+
+@code {
+    [Inject]
+    private NavigationManager NavigationManager { get; set; }
+
+    protected override void OnInitialized()
+    {
+        if (NavigationManager.Uri == NavigationManager.BaseUri)
+        {
+            NavigationManager.NavigateTo("/game");
+        }
+    }
+}
