--- a/tic-tac-toe-ui/Pages/Register.razor
+++ b/tic-tac-toe-ui/Pages/Register.razor
@@ -11,7 +11,6 @@
     <MudPaper Elevation="10" Class="register-card pa-6 animate-card">
         <MudGrid>
             <MudItem xs="12" Class="d-flex justify-center">
-                <!-- Замени путь на реальный логотип или удали, если не нужен -->
                 <MudImage Src="images/logo.png" Alt="Логотип игры" Width="100" Height="100" Class="mb-4 logo-animation" />
             </MudItem>
             <MudItem xs="12">
@@ -242,7 +241,7 @@
 
         try
         {
-            // Отправляем только Username, Email и Password, без ConfirmPassword
+            // Отправляем Username, Email и Password
             var request = new
             {
                 Username = model.Username,
