Исправил баг с генерацией задач при пропуске хода

--- a/tic-tac-toe-ui/Pages/Register.razor
+++ b/tic-tac-toe-ui/Pages/Register.razor
@@ -11,7 +11,7 @@
     <MudPaper Elevation="10" Class="register-card pa-6 animate-card">
         <MudGrid>
             <MudItem xs="12" Class="d-flex justify-center">
-                <MudImage Src="images/logo.png" Alt="Логотип игры" Width="100" Height="100" Class="mb-4 logo-animation" />
+                <MudImage Src="icon.png" Alt="Логотип игры" Width="100" Height="100" Class="mb-4 logo-animation" />
             </MudItem>
             <MudItem xs="12">
                 <MudText Typo="Typo.h4" Align="Align.Center" GutterBottom="true">Регистрация</MudText>
